# november-editor

./: .gitignore  README.md  ahhhh.txt  babel.config.cjs  dev-app-update.yml  electron-builder.yml  electron.vite.config.mjs  eslint.config.mjs  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  what.txt
.github/workflows/: eslint.yml  tests.yml
import-test/: CMakeLists.txt
import-test/assets/: out.had
import-test/include/: data.h  text.h
import-test/src/: data.c  main.c  text.c
src/: App.jsx  Editor.jsx  Editor.scss
src/common/: bytes.ts  circles.js  circles.ts  constants.js  constants.ts  goals.js  goals.ts  graphics.ts  levels.js  levels.ts  mat.ts  modes.js  modes.ts  objects.ts  ow.ts  palettes.ts  render-level.ts  render-ow.ts  render.ts  text.js  text.ts  tileset.js  tileset.ts  types.js  types.ts  utils.js  utils.ts
src/main/: index.js
src/preload/: index.js
src/renderer/: index.html
src/renderer/src/: App.jsx  main.jsx
src/renderer/src/assets/: editor.scss
src/renderer/src/components/: ColorSelector.jsx  ColorSelector.tsx  Editor.jsx  Editor.tsx  GraphicsMode.jsx  GraphicsMode.tsx  LevelEditor.jsx  LevelEditor.tsx  LevelList.jsx  LevelList.tsx  LevelMode.jsx  LevelMode.tsx  OverworldMode.tsx  PaletteMode.tsx  SelectMode.jsx  SelectMode.tsx  TileEditor.jsx  TileEditor.tsx  TileGrid.jsx  TileGrid.tsx
src/renderer/src/components/LevelEditor/: LayerOptions.tsx  LayerSelectorList.tsx  LevelOptions.tsx  (+4 more)
test/: circles.test.mjs  circles.test.ts  fail.test.mjs  mat.test.ts  modes.test.mjs  text.test.js  text.test.ts
(+6 files in other folders)
